2006-09-14  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	Trying to implement some usability recommendations from
	Peter Sikking: bigger handles, more feedback to user.
	
	* app/display/gimpcanvas.[ch]: add
	GIMP_CANVAS_STYLE_XOR_STIPPLED to set of styles.

	* app/tools/gimpdrawtool.[ch]
	(gimp_draw_tool_draw_rectangle_stippled): new function.
	Needs a better stipple pattern, though.

	* app/tools/gimprectangletool.c: bigger handles in corners,
	and highlight thing that user is currently moving.
	
2006-09-14  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/widgets/gimprectangletool.c: even if constraining to boundaries,
	keep updating rectangel when pointer goes outside boundaries.
	Fixes bug #355740.
	
2006-09-14  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/widgets/gimppropwidgets.[ch]: add prop widget specially
	for controlling aspect ratio.

	* app/tools/gimprectangleoptions.ch]: use "aspect-numerator"
	and "aspect-denominator" properties instead of "aspect",
	and use new prop widget in gui to set and display them.

	* app/tools/gimprectangletool.c: calculate aspect from
	numerator and denominator.

2006-09-14  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpcurvestool.c (curves_graph_events): when editing a
	"smooth" curve, update the image while dragging instead of on
	button_release. Suggested by Joel Becker.

2006-09-14  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/plug-ins/gtkcons.py: use gtk.CLOSE instead of
	"Close" to clarify why this string doesn't need to be marked for
	translation.

2006-09-14  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcontrollereditor.[ch]
	* app/widgets/gimpcontrollerlist.c: pass a GimpContext to
	gimp_viewable_dialog_new().

2006-09-14  Sven Neumann  <sven@gimp.org>

	* app/actions/image-actions.c
	* app/dialogs/preferences-dialog.c
	* app/tools/gimpvectortool.c
	* app/widgets/gimpcontrollereditor.c: 
	* plug-ins/common/autocrop.c
	* plug-ins/common/max_rgb.c: resolved conflicting mnemonics, added