@@ -226,8 +226,9 @@ run (const gchar      *name,
       gimp_displays_flush ();
 
       /* set data for next use of filter */
-      gimp_set_data (PLUG_IN_PROC, &unsharp_params,
-                     sizeof (UnsharpMaskParams));
+      if (run_mode == GIMP_RUN_INTERACTIVE)
+        gimp_set_data (PLUG_IN_PROC,
+                       &unsharp_params, sizeof (UnsharpMaskParams));
 
       gimp_drawable_detach(drawable);
       values[0].data.d_status = status;
